Fixed bug with not centered text in dialog

--- a/www/css/elements.css
+++ b/www/css/elements.css
@@ -118,6 +118,11 @@ input[type=number] {
 
 .message-container {
     min-width: calc(var(--interface-spacing) * 23);
+    white-space: nowrap;
+}
+
+.message-container.dialog {
+    min-width: calc(var(--interface-spacing) * 30);
 }
 
 
